# codewars

./: AlphabeticAnagrams.py  BattleshipFieldValidator.py  Calculator.py  CircularList.ipynb  CircularList.py  ClosestAndSmallest.py  CompletePhotoPattern.py  ContainAllRoots.py  FindTheOddInt.py  GameOfLife.py  GrowthOfAPopulation.py  HardSodukoSolver.py  HungarianMethod.py  MatrixDeterminant.py  MemoizedFibonacci.py  MultiplesOf3Or5.py  ObservedPin.py  OptionalWalrus.py  PyramidSlideDown.py  Rainfall.py  SalesmanTravel.py  ScreenLockingPatterns.py  StargateSG1.py  StripComments.py  TheTwelveDaysofChristmas.py  TowerDefence.py  Untitled-1.ipynb  main.py  td_main.py  test.ipynb  test.py
 FindTheParityOutlier/: FindTheParityOutlier.py
 HelpTheBookseller/: main.py
100prisoners/: main.py  n-priosoners.ipynb  prisoners.py
AFloatingPointSystem/: AFloatingPointSystem.py
Amidakuji/: amidakuji.py
BreakingTheVigenèreCipher/: main.py  pyproject.toml
CodewarsStyleRankingSystem/: User.py  main.py
FindTheParityOutlier/: FindTheParityOutlier.py
FullMetalChemist/: Molecule.py  main.py  tests.py
HelpTheBookseller/: main.py
PersistentBugger/: PersistentBugger.py
PlantsAndZombies/: examples.py  main.py  main2.py  pyproject.toml  snake.py  utilities.py
PositionsAverage/: main.py
SpoonerizeMe/: main.py
SumsOfParts/: main.py
TowerDefence/: TowerDefence.py  combine_to_test.py  main.py
ValidateCreditCardNumber/: README.md  (+1 more)
best-travel/: README.md  pyproject.toml
best-travel/best_travel/: __main__.py
human-readable-duration-format/: README.md  pyproject.toml
human-readable-duration-format/human_readable_duration_format/: __main__.py
i-liked-sql-better/: README.md  pyproject.toml  test.db
i-liked-sql-better/i_liked_sql_better/: __main__.py
keyword-cipher/: pyproject.toml
keyword-cipher/keyword_cipher/: __main__.py
texas-hold-em/: README.md  pyproject.toml
texas-hold-em/texas_hold_em/: __main__.py
(+35 files in other folders)
