[tool.poetry]
name = "human-readable-duration-format"
version = "0.1.0"
description = ""
authors = ["Jens Peder Meldgaard <jenspederm@gmail.com>"]
readme = "README.md"
packages = [{include = "human_readable_duration_format"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
