[tool.poetry]
name = "i-liked-sql-better"
version = "0.1.0"
description = ""
authors = ["Jens Peder Meldgaard <jenspederm@gmail.com>"]
readme = "README.md"
packages = [{include = "i_liked_sql_better"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
