[tool.poetry]
name = "texas-hold-em"
version = "0.1.0"
description = ""
authors = ["Jens Peder Meldgaard <jenspederm@gmail.com>"]
readme = "README.md"
packages = [{include = "texas_hold_em"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
